--- a/styloteam.css
+++ b/styloteam.css
@@ -735,7 +735,7 @@
     font-family:'poppins' , sans-serif;
     text-transform: none;
      transition: all 0.3 linear;
-    width: 100%;
+    /*width: 100%;*/
 }
 
 
