--- a/stylosignup.css.css
+++ b/stylosignup.css.css
@@ -8,39 +8,50 @@ body
     background-repeat: no-repeat; 
     margin: 0;
     padding: 0;
-    
+        width: 100%;
+   height: 80vw
 }
+
+
+
+
+
+
+
+
+
+
 
 
 #register 
 {
-    
-    width: 350px;
-    height: 560px;
-    background: #000;
-    color: burlywood;
-    top:55%;
-    left:50%;
-    position: relative;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 90px 30px;
-    border-bottom: 15;
-    border-radius: 15px;
+  
 
+
+   background-color:black;
+    color: burlywood;
+    border: 2 groove red;
+    width: 38vw;
+    height:65vw;
+    position: absolute;
+    left:33%;
+    top:16% ;
+    padding: 5vw 2vw;
+    box-sizing: border-box;
+    font-size: 1.2vw;
+    border-radius: 15px;
+    
 }
 
 
-
-
 #avatar
-{ 
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
+{
+    width:7vw;
+    height:7vw;
     position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
+    left:37%;
+    top:-4vw;
+    border-radius: 50%;
 }
 
 
@@ -48,11 +59,10 @@ body
 
 #register h1
 {
-    margin: 0;
-    padding: 0 0 20px;
+        margin: 0px;
+    padding: 0px 0px 3vw;
     text-align: center;
-    font-size: 35px;
-    height: auto;
+    font-size: 3vw;
 
    
 }
@@ -62,16 +72,19 @@ body
 #register p
 {
    
-    margin: 0;
+     margin: 0;
     padding: 0;
     font-weight: bold;
-    
+    font-size: 1.6vw;
+    position: relative;
+    top: 0vw;
+    height: 1.8vw
     
 }
 
 
 
-
+/*
 
 #register input
 {
@@ -81,8 +94,29 @@ body
     
 
 }
+*/
+
+#register input
+{
+   
+width: 100%;
+    margin-bottom: 1.9vw;
+font-size: 1.3vw;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+/*
 #register input[type="text"], input[type="password"]
 {
     border: none;
@@ -94,6 +128,27 @@ body
     font-size: 13px;
    
 }
+*/
+
+
+
+
+#register input[type="text"], input[type="password"]
+{
+    
+
+
+    border: none;
+    border-bottom: 1px solid floralwhite;
+    background: transparent;
+    outline: none;
+    height: 1.5vw;
+    color: floralwhite;
+    font-size: 1.3vw;
+    position: relative;
+    top:1vw;
+}
+
 
 
 
@@ -101,13 +156,18 @@ body
 
 #register input[type="submit"]
 {
+   
+    background:blanchedalmond;
     border: none;
     outline: none;
-    height: 20px;
-    background: burlywood;
+    height: 3vw;
     color: black;
-    font-size: 18px;
-    border-radius: 20px;
+    font-size: 2.2vw;
+    border-radius: 2vw;
+    position: absolute;
+    top: 88%;
+    width: 25vw;
+    left: 15%;
     
 }
 
@@ -131,9 +191,14 @@ body
 #register a
 {
     text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color:darkgray;
+    font-size: 1.2vw;
+    line-height: 1.6vw;
+    color:darkgrey;
+    position: relative;
+    border: 0%;
+    left: 0%;
+    height: 1vw;
+    bottom: -17vw;
 }
 
 
