--- a/stylo_graphic.css
+++ b/stylo_graphic.css
@@ -1,7 +1,85 @@
 body
 {
 background-color: white;    
+width: 100%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.imi
+{
+    background: url(pic/lava.png);
+    position:relative;
+    width: 100%;
+    height: 35vw;
+    top: 12vw;
+    left:0px;
+    background-size: cover;
+}
+
+
+
+
+
+
+
+.being img
+{
+    position:absolute;
+    height: 6vw;
+    width: 5vw;
+    top:3vw;
+    left: 15%;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+.active a
+{
+    position: absolute;
+    font-size: 5vw;
+    font-family: sans-serif;
+    text-align: center;
+    padding: 4%;
+    top: -1vw;
+    left: 23%;
+    text-decoration: none;
+    color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -25,10 +103,10 @@ background-color: white;
 .image1 img
 {
     position: absolute;
-    width: 200px;
-    height: 300px;
-    left:100px;
-    bottom:-250px;
+    width: 20vw;
+    height: 29vw;
+    left:12%;
+    top: 56vw;
 }
 
 
@@ -37,10 +115,10 @@ background-color: white;
 .image2 img
 {
     position: absolute;
-    width: 200px;
-    height: 300px;
-    left:730px;
-    bottom: -250px;
+   width: 20vw;
+    height: 29vw;
+    left:70%;
+     top: 56vw;
 }
 
 
@@ -49,12 +127,15 @@ background-color: white;
 .paragraph p
 {
     position: absolute;
-    width: 205px;
-    height: 300px;
-    left:430px;
-    bottom: -300px;
+    width: 21vw;
+    height: 50vw;
+    left:43%;
+    top: 61vw;
     font-family: sans-serif;
     text-justify: auto;
+    font-size: 1.7vw;
+    font-family:sans-serif;
+    text-align: match-parent;
     
 }
 
@@ -62,13 +143,48 @@ background-color: white;
 
 .paragraph h1
 {
-    position: absolute;
-    width: 280px;
-    height: 300px;
-    left:430px;
-    bottom: -250px;
+     position: absolute;
+    width: 20vw;
+    height: 20vw;
+    left:47%;
+    top: 57vw;
     font-family: sans-serif;
+    font-size: 3vw;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#texi
+{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+     height: 200vh;
+    
+    
+}
+
+
+
+
 
 
 
@@ -78,9 +194,9 @@ background-color: white;
 
 .heading p
 {
-    position: absolute;
+     position: absolute;
     left:270px;
-    top: 35px;
+    top: 20px;
     font-family: sans-serif;
     font-size: 55px;
 }
@@ -96,7 +212,7 @@ background-color: white;
     width:50px;
     height:50px;
     position: absolute;
-    bottom:550px;
+    bottom:530px;
     left: 200px;
     border-radius: 50%;
 }
@@ -112,12 +228,14 @@ background-color: white;
 
 
 
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:'poppins' , sans-serif;
-    text-transform: capitalize;
+    text-transform: none;
     transition: all 0.3 linear;
     
 }
@@ -133,15 +251,15 @@ background-color: white;
 .container
 {
     width: 100%;
-    height: 100vh;
+    height: -100vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: #fff;
     background-image: linear-gradient(90deg, #fff 0% , #alicewhite 100% );
-    position: absolute;
-    bottom: -1000px;
+    position:relative;
+    top: 70vw;
 }
 
 
@@ -151,11 +269,11 @@ background-color: white;
 
 .box
 {
-    width: 260px;
-    height: 455px;
+    width: 16em;
+    height: 28em;
     background-color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 30px;
     padding-top: 80px;
     margin: 20px;
     text-align: center;
@@ -171,7 +289,7 @@ background-color: white;
 
 .box h3
 {
-    font-size: 35px;
+    font-size: 2em;
     padding: 20px 0;
     color: #444;
     
@@ -184,7 +302,7 @@ background-color: white;
 
 .box p
 {
-    font-size: 15px;
+    font-size: 1em;
     color: #777;
 }
 
@@ -199,7 +317,7 @@ background-color: white;
     color: #fff;
     border: none;
     outline: none;
-    font-size: 17px;
+    font-size: 1em;
     cursor: pointer;
     border-radius: 50px;
     margin-top: 40px;
@@ -353,112 +471,15 @@ background-color: white;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'poppins' , sans-serif;
-    text-transform: capitalize;
-    transition: all 0.3 linear;
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
-.container
+.footer .seen p
 {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    background-image: linear-gradient(90deg, #fff 0% , #alicewhite 100% );
     position: absolute;
-    bottom: -1000px;
-    
-}
-
-
-
-
-
-
-.box
-{
-    width: 260px;
-    height: 455px;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    padding-top: 80px;
-    margin: 20px;
-    text-align: center;
-    letter-spacing: 1px;
-    box-shadow: 0 3px 5px rgba(0,0,0,.3);
-    overflow: hidden;
-    position: relative;
-    z-index: 0;
-    
-}
-
-
-.box p
-{
-    text-transform: lowercase;
-}
-
-
-
-
-.box h3
-{
-    font-size: 30px;
-    padding: 20px 0;
-    color: #444;
+    bottom:42%;
+    color:grey;
+    width: 61vw;
+    left:20%;
     text-transform: uppercase;
+    font-size:1.6vw;
 }
 
 
@@ -466,37 +487,22 @@ background-color: white;
 
 
 
-.box p
+
+
+
+
+
+
+
+.footer .seen5 p
 {
-    font-size: 15px;
-    color: #777;
-}
-
-
-
-
-.box button
-{
-    width:140px;
-    height: 40px;
-    background-color:#333;
-    color: #fff;
-    border: none;
-    outline: none;
-    font-size: 17px;
-    cursor: pointer;
-    border-radius: 50px;
-    margin-top: 40px;
-}
-
-
-
-
-
-.box button:hover
-{
-    letter-spacing: 2px;
-    opacity: .8;
+    position:absolute;
+    bottom:2%;
+    color:grey;
+    width: 50%;
+    left:35%;
+    text-transform: uppercase;
+    font-size: 1.5vw;
 }
 
 
@@ -504,114 +510,26 @@ background-color: white;
 
 
 
-.box::before
-{
-    width: 100px;
-    height: 100px;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
 
-
-
-
-
-.box::after
-{
-    width: 100%;
-    height: 100%;
-    background-color: 	#ff1493;
-    background-image: linear-gradient(45deg, #fbda61 0%, #ffSACD 100%);
-    content: '';
-    position: absolute;
-    top: 0;
-    left:0;
-    z-index:-2;
-    clip-path: circle(20% at 90% 10%);
-    transition: .2s;
-
+  
         
-    
-}
+   
 
 
 
 
 
-
-.box .count
+.footer .seen1 p
 {
     position: absolute;
-    top: 15px;
-    right: 30px;
-    font-size: 50px;
-    font-weight:bolder;
-    color: #fff;
+    bottom:36%;
+    color:grey;
+    width: 40%;
+    left:33%;
+    text-transform: lowercase;
+    font-size: 1.5vw;
+    
 }
-
-
-
-
-
-.box:nth-child(2):after{
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
-    
-} 
-
-
-
-.box:nth-child(3):after{
-    background-color: #08AEEa;
-    background-image: linear-gradient(0deg, #08AEEa 0%, #2af598 100%);
-}
-    
-    
-  .box:hover::after
-    {
-        clip-path:circle(100%);
-    }
-    
-    
-    .box:hover h3
-    {
-        color: #fff;
-    }
-    
-    
-    .box:hover h3
-    {
-        color:#fff;
-    }
-    
-    
-    
-    .box:hover p
-    {
-        color:#fff;
-    }
-    
-    
-    
-    
-    .box:hover button
-    {
-        color:#333;
-        background-color: #fff;
-    }
-    
-
-    .box:hover::before
-    {
-        background-color: rgba(0, 0, 0 , .1);
-    }
-
-
-
-
 
 
 
@@ -657,10 +575,10 @@ background-color: white;
 .footer
 {
     background-color: black;
-    width:1080px;
-    height:900px;
-    position: absolute;
-    bottom: -1950px;
+    width:100%;
+    height:90vw;
+    position:relative;
+    bottom:-80vw;
     
 }
 
@@ -670,25 +588,13 @@ background-color: white;
 .footer .foot_1 
 {
     position: relative;
-    left: 370px;
-    bottom: -150px;
-    width: 250px;
-    color: snow;
-     line-height: 1;
-   
+    left: 35%;
+  bottom:-8%;
+   width: 23vw;
+    color: white;
+   font-size: 1.5vw;
 }
 
-
-.footer .foot_1 li
-{
-    position: relative;
-    left:5px;
-    bottom:70px;
-    width: 250px;
-    color: darkgrey;
-    line-height: 1.5;
-   
-}
 
 
 .footer .foot_1 li:hover
@@ -700,36 +606,38 @@ background-color: white;
 
 
 
-
-
 .footer .foot_1 h1
 {
      text-transform: uppercase;
-     color: aliceblue;
-    position: absolute;
-    left:-15px;
-    bottom:290px;
+    position: relative;
+    bottom: -51%;
+    color: aliceblue;
+    
 }
 
 
 .footer .foot_2
 {
-    position: relative;
-    bottom:180px;
-    width: 280px;
-    height:20px;
+    position: absolute;
+    bottom:86%;
+    width: 10vw;
+    height:2vw;
     text-align: left;
-    width: 250px;
-    left: 55px;
+    width: 22vw;
+    left: 5%;
     color: darkgrey;
-     line-height: 1.5;
+    font-size: 1.5vw;
 }
 
 
 .footer .foot_2 h1
 {
+    
     color: aliceblue;
     text-transform: uppercase;
+    font-size: 3vw;
+    position: absolute;
+    bottom: 47%;
 }
 
 
@@ -738,76 +646,45 @@ background-color: white;
 .footer .foot_1 a
 {
     text-decoration: none;
-    color: snow;
-    line-height: 2.2;
+    color: aliceblue;
+    line-height: 2;
     color: darkgrey;
+    
 }
 
 
 
 
-.footer .foot_3 li
+
+
+
+
+
+
+
+
+
+
+.footer .foot_3
 {
-   position: relative;
-    left:650px;
-    bottom:170px;
-    width: 270px;
+    position: absolute;
+    bottom:89%;
+    width: 30vw;
+    height:2vw;
+    text-align: left;
+    left: 65%;
     color: darkgrey;
-    line-height: 1.5;
-   
+    font-size: 1.5vw;
 }
-
-
 
 
 .footer .foot_3 h1
 {
-    width: 400px;
-    position: relative;
-    left:640px;
-    bottom:195px;
     color: aliceblue;
     text-transform: uppercase;
-}
-
-
-
-
-
-
-
-
-
-
-.footer .seen p
-{
-    position: relative;
-    bottom:50px;
-    color:grey;
-    width: 610px;
-    left:210px;
-    text-transform: uppercase;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-.footer .seen1 p
-{
-    position: relative;
-    bottom:-180px;
-    color:grey;
-    width: 650px;
-    left:350px;
-    text-transform: lowercase;
+    font-size: 3vw;
+    width: 50vw;
+    bottom: 47%;
 }
 
 
@@ -836,6 +713,43 @@ background-color: white;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
 
 
 
@@ -848,12 +762,14 @@ background-color: white;
 .socail-menu ul
 {
     position: absolute;
-    bottom: 160px;
-    left:50%;
-    padding: 0;
-    margin: 0;
-    transform: translate(-50%,-50%);
+    bottom: 15%;
+    left:40%;
+    padding: 0px;
+    margin: 0px;
+    transform: translate(-15px,-15px);
     display: flex;
+   
+    
     
 }
 
@@ -862,14 +778,15 @@ background-color: white;
 {
     list-style: none;
     margin: 0 15px;
+     
     
 }
 
 
 .socail-menu ul li .fa
 {
-    font-size: 30px;
-    line-height: 60px;
+    font-size: 3vw;
+    line-height: 7vw;
     transition: .6s;
     color: #000;
     
@@ -887,8 +804,8 @@ background-color: white;
 {
     position: relative;
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 5vw;
+    height: 5vw;
     border-radius: 50%;
     background-color: #fff;
     transition: .6s;
@@ -916,7 +833,7 @@ background-color: white;
 
 .socail-menu ul li:nth-child(2) a:hover
 {
-    background-color: greenyellow;
+    background-color:greenyellow;
 }
 
 
@@ -931,6 +848,91 @@ background-color: white;
 {
     background-color: #007785;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+         
+    
+         
+         
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: white;
+  }
+}
+
+
+
+/* For desktop: */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
